<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_search_view_texinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:theme="@style/TextInputLayoutStyle"
        android:hint="@string/dialog_search_view_textinput_hint"
        app:hintTextAppearance="@style/TextInputLayoutStyleHint"
        app:helperText="@string/dialog_search_view_textinput_text_helper"
        app:helperTextTextAppearance="@style/TextInputLayoutHelperStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/dialog_search_view_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/dialog_search_view_textview_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_search_view_textview_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_search_view_texview_search"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_view_texinputlayout" />

    <TextView
        android:id="@+id/dialog_search_view_texview_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_search_view_textview_search"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_view_texinputlayout" />



</android.support.constraint.ConstraintLayout>